--- a/Kursova/Kursova/Kursova.vcxproj.filters
+++ b/Kursova/Kursova/Kursova.vcxproj.filters
@@ -53,9 +53,6 @@
     <ClInclude Include="Triangle.h">
       <Filter>Заголовочные файлы\Model</Filter>
     </ClInclude>
-    <ClInclude Include="MainForm1.h">
-      <Filter>Файлы исходного кода\View</Filter>
-    </ClInclude>
     <ClInclude Include="Rectangles.h">
       <Filter>Заголовочные файлы\Model</Filter>
     </ClInclude>
@@ -68,5 +65,10 @@
     <ClInclude Include="KursovaPresenter.h">
       <Filter>Заголовочные файлы\Presenter</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="MainForm1.resx">
+      <Filter>Файлы ресурсов</Filter>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
