--- a/Kursova/Kursova/Kursova.vcxproj
+++ b/Kursova/Kursova/Kursova.vcxproj
@@ -89,6 +89,9 @@
     <ClInclude Include="ITrianglesRectanglesView.h" />
     <ClInclude Include="KursovaModel.h" />
     <ClInclude Include="KursovaPresenter.h" />
+    <ClInclude Include="MainForm.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="Rectangles.h" />
     <ClInclude Include="Triangle.h" />
   </ItemGroup>
